--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "parlay-perfector",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node":"12.11.1",
+    "npm":"6.14.8"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
