--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "install": "cd client && npm install && cd ../server && npm install"
   },
   "devDependencies": {
-    "concurrently": "^6.5.1"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "concurrently": "^6.5.1",
+    "webpack": "^5.76.3",
+    "webpack-dev-server": "^4.13.1"
   },
   "eslintConfig": {
     "extends": [
